# SPlit.jl

./: .all-contributorsrc  .copier-answers.yml  .gitmodules  .pre-commit-config.yaml  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  LICENSE  Project.toml  README.md  lychee.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: 10-bug-report.yml  20-feature-request.yml  30-usage.yml  99-general.yml  config.yml
.github/workflows/: Docs.yml  ReusableTest.yml  SpellCheck.yml  Test.yml  TestOnPRs.yml
dev/: .documenter-siteinfo.json  index.html  objects.inv  search_index.js
dev/90-contributing/: index.html
dev/91-developer/: index.html
dev/95-reference/: index.html
docs/: Project.toml  make.jl
docs/src/: 90-contributing.md  91-developer.md  95-reference.md  index.md
splitiq/: LICENSE  README.md  pyproject.toml
splitiq/.github/workflows/: test.yml
splitiq/examples/: basic_usage.py
splitiq/src/splitiq/: __init__.py  core.py  exceptions.py  julia_interface.py  utils.py
splitiq/tests/: __init__.py  test_core.py
src/: SPlit.jl  comparison.jl  convert.jl  data_preprocessing.jl  energy_distance.jl  init.jl  interface.jl  main.jl  python_bindings.jl  split_quality.jl  subsampling.jl  support_points.jl  types.jl
test/: Project.toml  runtests.jl  test_data_preprocessing.jl  test_energy_distance.jl  test_julia_native_api.jl  test_main.jl  test_subsampling.jl  test_support_points.jl
v0.1.0/: .documenter-siteinfo.json  index.html  search_index.js
v0.1.0/90-contributing/: index.html
v0.1.0/91-developer/: index.html
v0.1.0/95-reference/: index.html
